# tod_control

./: README.md
tod_command_creation/: CMakeLists.txt  README.md  package.xml
tod_command_creation/launch/: tod_command_creation.launch
tod_command_creation/src/operator/: CMakeLists.txt  CommandCreator.cpp  CommandCreator.h  CommandCreatorNode.cpp  ForceFeedbackController.cpp  ForceFeedbackController.h  ForceFeedbackControllerNode.cpp  PrimaryCommandSender.cpp  SecondaryCommandSender.cpp
tod_command_creation/src/vehicle/: CMakeLists.txt  PrimaryCommandReceiver.cpp  SecondaryCommandReceiver.cpp
tod_direct_control/: CMakeLists.txt  README.md  package.xml
tod_direct_control/launch/: tod_direct_control.launch
tod_direct_control/src/vehicle/: CMakeLists.txt  ForwardPrimaryCtrlCmd.cpp
tod_navigation/: CMakeLists.txt  README.md  package.xml
tod_navigation/launch/: tod_navigation.launch
tod_navigation/py/: bag_to_xml.py
tod_navigation/src/: OperatorRouteReceiver.cpp  OperatorRouteToMeshMsgNode.cpp  VehicleRouteProviderNode.cpp  VehicleRouteSender.cpp  XmlRouteParser.cpp  XmlRouteParser.h
tod_navigation/test/: CMakeLists.txt  TestRoute.xml  WrongFormat.xml  catkin_build.sh  catkin_build_and_roscore.sh  testXmlParser.cpp
tod_navigation/xml/: ExampleRoute.xml  ShalunOnWorkstationPC.xml
tod_perception_modification/: CMakeLists.txt  README.md  package.xml
tod_perception_modification/launch/: tod_perception_modification.launch
tod_perception_modification/msg/: PercModOperatorApproval.msg  PercModOperatorRequest.msg  PercModVehicleResponse.msg
tod_perception_modification/rviz/: rviz_grid_maps.rviz
tod_perception_modification/src/helper/: Conversion.h  GridMap.h  LoadParam.h  Msg.h  ObjectList.h  StateMachine.h  Transform.h
tod_perception_modification/src/network/: CMakeLists.txt  OperatorApprovalSender.cpp  OperatorGridMapReceiver.cpp  OperatorObjectsReceiver.cpp  OperatorRequestSender.cpp  OperatorResponseReceiver.cpp  OperatorVelocitySender.cpp  VehicleApprovalReceiver.cpp  VehicleGridMapSender.cpp  VehicleObjectsSender.cpp  VehicleRequestReceiver.cpp  VehicleResponseSender.cpp  VehicleVelocityReceiver.cpp
tod_perception_modification/src/operator/: CMakeLists.txt  OperatorPerceptionModification.cpp  OperatorPerceptionModification.h  OperatorPerceptionModificationNode.cpp  PercModStatus.cpp  PercModStatus.h  PopupNewScenario.cpp  PopupNewScenario.h  PopupNewScenarioNode.cpp  PopupNewScenarioRosThread.h
tod_perception_modification/src/vehicle/: CMakeLists.txt  ControlCommandCreator.cpp  ControlCommandCreator.h  ControlCommandCreatorNode.cpp  FakeCellsPublisher.cpp  FakeCellsPublisher.h  FakeCellsPublisherNode.cpp  FakeObjectsPublisher.cpp  FakeObjectsPublisher.h  FakeObjectsPublisherNode.cpp  FakeThingsPublisherAbstract.h  PathToCollisionFreePath.cpp  PathToCollisionFreePath.h  PathToCollisionFreePathNode.cpp  RouteToPath.cpp  RouteToPath.h  RouteToPathNode.cpp  Timer.cpp  Timer.h  VehicleCommunicator.cpp  VehicleCommunicator.h  VehicleCommunicatorNode.cpp  VehiclePerceptionModification.cpp  VehiclePerceptionModification.h  VehiclePerceptionModificationNode.cpp  VehiclePopupTriggerNode.cpp
tod_perception_modification/test/: CMakeLists.txt  testObjectList.cpp  testPercModStatus.cpp
tod_perception_modification/yaml/: grid_map_visualization_rviz.yaml  grid_map_visualization_rviz2.yaml  path_to_collision_free_path_config.yaml  reflection_pedestrian_crossing.yaml  route_to_path_config.yaml  seven_fake_objects.yaml  zero.yaml
tod_pure_pursuit/: CMakeLists.txt  README.md  package.xml
tod_pure_pursuit/include/tod_pure_pursuit/: PurePursuit.h
tod_pure_pursuit/launch/: tod_pure_pursuit.launch
tod_pure_pursuit/msg/: ppLog.msg
tod_pure_pursuit/src/: CMakeLists.txt  PathTrackingControl.cpp  PathTrackingControl.h  PathTrackingControlNode.cpp  PurePursuit.cpp
tod_pure_pursuit/test/: CMakeLists.txt  PurePursuitTest.cpp  test.launch
tod_safe_corridor/: CMakeLists.txt  README.md  package.xml
tod_safe_corridor/include/tod_safe_corridor/: ClothoidPlanner.h  ConstantDeceleration.h  LateralPlanner.h  LongitudinalPlanner.h  PlannerFactory.h  SweptPathCreator.h
tod_safe_corridor/launch/: tod_safe_corridor.launch
tod_safe_corridor/src/common/: CMakeLists.txt  ClothoidPlanner.cpp  ConstantDeceleration.cpp  LateralPlanner.cpp  SweptPathCreator.cpp
tod_safe_corridor/src/operator/: CMakeLists.txt  OperatorGateStateReceiver.cpp  OperatorTrajectorySender.cpp  SafeTrajCreator.cpp  SafeTrajCreator.h  SafeTrajCreatorNode.cpp
tod_safe_corridor/src/vehicle/: CMakeLists.txt  VehicleGateStateSender.cpp  VehicleTrajectoryReceiver.cpp
tod_shared_control/: CMakeLists.txt  README.md  package.xml
tod_shared_control/cmake/Modules/: Findacados.cmake  Findblasfeo.cmake  Findhpipm.cmake
tod_shared_control/config/: fbl_rqt_multiplot.xml  hsc_rqt_multiplot.xml  mpc.rviz  mpc_rqt_multiplot.xml  ptc.rviz  ptc_rqt_multiplot.xml  svc.rviz  svc_rqt_multiplot.xml
tod_shared_control/launch/: fbl_vehicle.launch  mpc_vehicle.launch  nsc_vehicle.launch  ptc_vehicle.launch  svc_vehicle.launch  tod_shared_control.launch
tod_shared_control/msg/: FblLog.msg  MpcLog.msg  SvcLog.msg
tod_shared_control/src/: CMakeLists.txt
tod_shared_control/src/common/: BicycleModelVariables.h  CommonFeedback.cpp  CommonFeedback.h  ControllerBase.cpp  ControllerBase.h  ObjectsHandler.cpp  ObjectsHandler.h  TrajectoryHandler.cpp  TrajectoryHandler.h
tod_shared_control/src/dummy/: CMakeLists.txt  ObjectListPublisher.cpp  README.md  TrajectoryGeneratorNode.cpp
tod_shared_control/src/fbl/: CMakeLists.txt  FblBasedTrackingController.cpp  FblBasedTrackingController.h  FblBasedTrackingControllerNode.cpp  FeedbackLinearization.cpp  FeedbackLinearization.h  README.md
tod_shared_control/src/mpc/: CMakeLists.txt  ModelPredictiveController.cpp  ModelPredictiveController.h  ModelPredictiveControllerNode.cpp  MpcSolver.cpp  MpcSolver.h  README.md
tod_shared_control/src/network/: CMakeLists.txt  OperatorReceiversNode.cpp  README.md  VehicleSendersNode.cpp
tod_shared_control/src/ptc/: CMakeLists.txt  (+6 more)
(+59 files in other folders)
