<?xml version="1.0"?>
<package format="2">
    <name>tod_direct_control</name>
    <version>1.0.0</version>
    <description>The tod_direct_control package</description>

    <maintainer email="hoffmann@ftm.mw.tum.de">Simon Hoffmann</maintainer>
    <license>LGPLv3</license>
    
    <build_depend>tod_msgs</build_depend>
    <build_depend>roscpp</build_depend>

    <build_export_depend>tod_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>

    <buildtool_depend>catkin</buildtool_depend>
</package>
