<?xml version="1.0"?>
<package format="2">
  <name>tod_perception_modification</name>
  <version>0.0.0</version>
  <description>The tod_perception_modification package</description>

  <maintainer email="johannes.feiler@tum.de">Johannes Feiler</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tod_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tod_network</build_depend>
  <build_depend>tod_helper</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tod_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>tod_network</build_export_depend>
  <build_export_depend>tod_helper</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tod_pure_pursuit</exec_depend>

</package>
