<?xml version="1.0"?>
<package format="2">
<name>tod_pure_pursuit</name>
<version>0.0.0</version>
<description>The tod_path_tracking package</description>

<maintainer email="simon.hoffmann@tum.de">Simon Hoffmann</maintainer>

<license>LGPLv3</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>tf2_ros</build_depend>
<build_depend>tf2</build_depend>
<build_depend>nav_msgs</build_depend>
<build_depend>tod_msgs</build_depend>
<build_depend>message_generation</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>tod_helper</build_depend>
<build_depend>tod_core</build_depend>

<build_export_depend>roscpp</build_export_depend>
<build_export_depend>tf2_ros</build_export_depend>
<build_export_depend>tf2</build_export_depend>
<build_export_depend>nav_msgs</build_export_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>tod_msgs</build_export_depend>
<build_export_depend>message_generation</build_export_depend>
<build_export_depend>tod_helper</build_export_depend>

<exec_depend>roscpp</exec_depend>
<exec_depend>message_runtime</exec_depend>
<exec_depend>tod_vehicle_config</exec_depend>

</package>
