<?xml version="1.0"?>
<package format="2">
  <name>tod_safe_corridor</name>
  <version>1.0.0</version>
  <description>The tod_safe_corridor package</description>

  <maintainer email="simon.hoffmann@tum.de">simon</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tod_msgs</build_depend>
  <build_depend>tod_helper</build_depend>
  <build_depend>tod_network</build_depend>
  <build_depend>tod_safety_monitoring</build_depend>
  <build_depend>tod_core</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tod_msgs</build_export_depend>
  <build_export_depend>tod_helper</build_export_depend>
  <build_export_depend>tod_safety_monitoring</build_export_depend>
  <build_export_depend>tod_core</build_export_depend>
  <build_export_depend>tod_network</build_export_depend>

  <exec_depend>tod_safety_monitoring</exec_depend>
  <exec_depend>tod_core</exec_depend>

</package>
