set(NAME OperatorRequestSender)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} OperatorRequestSender.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

set(NAME VehicleRequestReceiver)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} VehicleRequestReceiver.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

set(NAME VehicleResponseSender)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} VehicleResponseSender.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

set(NAME OperatorResponseReceiver)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} OperatorResponseReceiver.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

set(NAME OperatorApprovalSender)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} OperatorApprovalSender.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

set(NAME VehicleApprovalReceiver)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} VehicleApprovalReceiver.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

set(NAME VehicleGridMapSender)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} VehicleGridMapSender.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})

set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)
set(NAME OperatorGridMapReceiver)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} OperatorGridMapReceiver.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

set(NAME VehicleObjectsSender)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} VehicleObjectsSender.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

set(NAME OperatorObjectsReceiver)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} OperatorObjectsReceiver.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

set(NAME OperatorVelocitySender)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} OperatorVelocitySender.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

set(NAME VehicleVelocityReceiver)
set(TARGETS ${TARGETS} ${NAME})
add_executable(${NAME} VehicleVelocityReceiver.cpp)
add_dependencies(${NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_include_directories(${NAME} PRIVATE ${catkin_INCLUDE_DIRS})
target_link_libraries(${NAME} ${catkin_LIBRARIES})
set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 17)

install(TARGETS ${TARGETS}
    RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
